--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,26 @@ html {
 *, *::before, *::after {
 	box-sizing: inherit;
 }
+
+.asteroid {
+	position: absolute;
+	background-image: url(../images/asteroid.svg);
+	top: 100px;
+	left: 200px;
+	width: 200px;
+	height: 200px;
+	background-size: contain;
+	animation: asteroid-rotate 20s linear infinite;
+}
+
+@keyframes asteroid-rotate {
+
+0% {
+transform: rotate(0deg);
+}
+
+100% {
+transform: rotate(360deg);
+}
+
+}
