--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,19 @@ html {
 	box-sizing: inherit;
 }
 
+body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
 .asteroid {
 	position: absolute;
 	background-image: url(../images/asteroid.svg);
 	top: 200px;
-	left: 200px;
-	width: 200px;
-	height: 200px;
+	left: 100px;
+	width: 250px;
+	height: 250px;
 	background-size: contain;
 	animation: asteroid-rotate 20s linear infinite;
 }
@@ -48,7 +54,7 @@ transform: rotate(360deg);
 	width: 100px;
 	height: 100px;
 	background-size: contain;
-	animation: ship-float 10s ease-in-out alternate infinite;
+	animation: ship-float 8s ease-in-out infinite;
 }
 
 @keyframes ship-float {
@@ -60,17 +66,17 @@ left: 500px;
 
 20% {
 top: 280px;
-left: 420px;
+left: 560px;
 }
 
 40% {
-top: 200px;
-left: 400px;
+top: 340px;
+left: 520px;
 }
 
 60% {
-top: 200px;
-left: 520px;
+top: 160px;
+left: 480px;
 }
 
 80% {
@@ -79,17 +85,33 @@ left: 420px;
 }
 
 100% {
-top: 140px;
-left: 490px;
+top: 200px;
+left: 500px;
 }
 
 }
 
 .stars {
-
+	position: absolute;
+	width: 100%;
+	height: 100vh;
+	background-image: url(../images/stars.svg);
+	background-color: black;
+	animation: stars-move 5s ease-in-out alternate infinite;
 }
 
 @keyframes stars-move {
 
+	0% {
+	transform: scale(1,1);
+}
+
+50% {
+		transform: scale(1.05,1.05);
+}
+
+100% {
+	transform: scale(1,1);
+}
 
 }
